fixed layout bug

--- a/source/styles/components/_home-advisors.scss
+++ b/source/styles/components/_home-advisors.scss
@@ -24,7 +24,6 @@
   display: inline-block;
   border-radius: $border-radius-small;
   text-align: center;
-  width: 40%;
   a {
     color: #000;
     text-decoration: none;
@@ -32,8 +31,8 @@
   &:hover {
     background: $tan-light;
   }
-  @media (min-width: 450px) {
-    width: 25%;
+  @media (max-width: $screen-sm-min)  {
+    width: 40%;
   }
 }
 
